[*] Refactoring